--- a/VolunteerForm.html
+++ b/VolunteerForm.html
@@ -1,1 +1,31 @@
+<!DOCTYPE html>
+<html>
+<body>
+
+<h1>Volunteer Form</h1>
+
+<form action="/action_page.php">
+  <fieldset>
+    <legend>My Availability</legend>
+    <h3><strong>Days Available</strong></h3>
+      <input type="checkbox" id="SundayID" name="SundayName" value="Sunday">
+      <label for="vehicle1">Sunday</label><br>
+      <input type="checkbox" id="MondayID" name="MondayName" value="Monday">
+      <label for="vehicle2">Monday</label><br>
+      <input type="checkbox" id="TuesdayID" name="MondayName" value="Tuesday">
+      <label for="vehicle3">Tuesday</label>
+      <input type="checkbox" id="WednesdayID" name="WednesdayName" value="Wednesday">
+      <label for="vehicle3">Tuesday</label>
+      <input type="checkbox" id="ThursdayID" name="ThursdayName" value="Thursday">
+      <label for="vehicle3">Tuesday</label>
+      <input type="checkbox" id="FridayID" name="FridayName" value="Friday">
+      <label for="vehicle3">Tuesday</label>
+      <input type="checkbox" id="SaturdayID" name="SaturdayName" value="Saturday">
+      <label for="vehicle3">Tuesday</label>
+  </fieldset>
+  <input type="submit" value="Submit">
+</form>
+
+</body>
+</html>
 
