--- a/VolunteerForm.html
+++ b/VolunteerForm.html
@@ -13,15 +13,15 @@
       <input type="checkbox" id="MondayID" name="MondayName" value="Monday">
       <label for="vehicle2">Monday</label><br>
       <input type="checkbox" id="TuesdayID" name="MondayName" value="Tuesday">
-      <label for="vehicle3">Tuesday</label>
+      <label for="vehicle3">Tuesday</label><br>
       <input type="checkbox" id="WednesdayID" name="WednesdayName" value="Wednesday">
-      <label for="vehicle3">Tuesday</label>
+      <label for="vehicle3">Wednesday</label><br>
       <input type="checkbox" id="ThursdayID" name="ThursdayName" value="Thursday">
-      <label for="vehicle3">Tuesday</label>
+      <label for="vehicle3">Thursday</label><br>
       <input type="checkbox" id="FridayID" name="FridayName" value="Friday">
-      <label for="vehicle3">Tuesday</label>
+      <label for="vehicle3">Friday</label><br>
       <input type="checkbox" id="SaturdayID" name="SaturdayName" value="Saturday">
-      <label for="vehicle3">Tuesday</label>
+      <label for="vehicle3">Saturday</label><br>
   </fieldset>
   <input type="submit" value="Submit">
 </form>
