--- a/VolunteerForm.html
+++ b/VolunteerForm.html
@@ -2,30 +2,41 @@
 <html>
 <body>
 
-<h1>Volunteer Form</h1>
+  <h1>Volunteer Form</h1>
 
-<form action="/action_page.php">
-  <fieldset>
-    <legend>My Availability</legend>
-    <h3><strong>Days Available</strong></h3>
-      <input type="checkbox" id="SundayID" name="SundayName" value="Sunday">
-      <label for="vehicle1">Sunday</label><br>
-      <input type="checkbox" id="MondayID" name="MondayName" value="Monday">
-      <label for="vehicle2">Monday</label><br>
-      <input type="checkbox" id="TuesdayID" name="MondayName" value="Tuesday">
-      <label for="vehicle3">Tuesday</label><br>
-      <input type="checkbox" id="WednesdayID" name="WednesdayName" value="Wednesday">
-      <label for="vehicle3">Wednesday</label><br>
-      <input type="checkbox" id="ThursdayID" name="ThursdayName" value="Thursday">
-      <label for="vehicle3">Thursday</label><br>
-      <input type="checkbox" id="FridayID" name="FridayName" value="Friday">
-      <label for="vehicle3">Friday</label><br>
-      <input type="checkbox" id="SaturdayID" name="SaturdayName" value="Saturday">
-      <label for="vehicle3">Saturday</label><br>
-  </fieldset>
-  <input type="submit" value="Submit">
-</form>
+  <form action="/action_page.php">
+    <fieldset>
+      <legend>My Info</legend>
+        <label for="fname">first name:</label>
+        <input type="text" id="fname" name="fname"><br>
+        <label for="lname">last name:</label>
+        <input type="text" id="lname" name="lname">
+    </fieldset>
+  </form>
 
-</body>
+  <form action="/action_page.php">
+    <fieldset>
+      <legend>My Availability</legend>
+      <h3><strong>Days Available:</strong></h3>
+        <input type="checkbox" id="SundayID" name="SundayName" value="Sunday">
+        <label for="SundayID">Sunday</label><br>
+        <input type="checkbox" id="MondayID" name="MondayName" value="Monday">
+        <label for="MondayID">Monday</label><br>
+        <input type="checkbox" id="TuesdayID" name="TuesdayName" value="Tuesday">
+        <label for="TuesdayID">Tuesday</label><br>
+        <input type="checkbox" id="WednesdayID" name="WednesdayName" value="Wednesday">
+        <label for="WednesdayID">Wednesday</label><br>
+        <input type="checkbox" id="ThursdayID" name="ThursdayName" value="Thursday">
+        <label for="ThursdayID">Thursday</label><br>
+        <input type="checkbox" id="FridayID" name="FridayName" value="Friday">
+        <label for="FridayID">Friday</label><br>
+        <input type="checkbox" id="SaturdayID" name="SaturdayName" value="Saturday">
+        <label for="SaturdayID">Saturday</label><br>
+      <h3><strong>Comments</strong></h3>
+    </fieldset>
+    <input type="submit" value="Submit">
+  </form>
+
+  </body>
 </html>
 
