--- a/VolunteerForm.html
+++ b/VolunteerForm.html
@@ -31,8 +31,8 @@
 
         <label for="age_field">Age:</label><br>
           <select id="age_field" name="age_field">
-            <option value="under18"selected=>under 18</option>
-            <option value="above18">over 18</option>
+            <option value="under 18"selected=>under 18</option>
+            <option value="over 18">over 18</option>
           </select>
         
     </fieldset>
