--- a/VolunteerForm.html
+++ b/VolunteerForm.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <meta charset="UTF-8" />
+    <title>Volunteer Form</title>
+</head>
 <body>
 
   <h1>Volunteer Form</h1>
